#1 fix on setup

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:7.1.8-apache
+FROM php:7.2-apache
 
-MAINTAINER Paul Redmond
+MAINTAINER alkomm
 
 COPY . /srv/app
 COPY .docker/vhost.conf /etc/apache2/sites-available/000-default.conf
