#6 add bootstrap and close issue

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -7,3 +7,6 @@ COPY .docker/vhost.conf /etc/apache2/sites-available/000-default.conf
 
 RUN chown -R www-data:www-data /srv/app \
 && a2enmod rewrite
+
+RUN apt-get update
+RUN apt-get install -y git zip unzip
