--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "Multiplayer Tick Tack Toe",
   "require": {
     "php": ">=7.2.0",
-    "cboden/ratchet": "^0.4.1"
+    "cboden/ratchet": "^0.4.1",
+    "twbs/bootstrap": "4.1.3"
   },
   "autoload": {
     "psr-4": {
