--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
     "cboden/ratchet": "^0.4.1",
     "twbs/bootstrap": "4.1.3"
   },
+  "require-dev": {
+    "symfony/var-dumper": "^4.3",
+    "symfony/console": "^4.3"
+  },
   "autoload": {
     "psr-4": {
       "TickTackToe\\": "src/"
